Created placeholders (header, footer).

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,5 @@
-<body>
-<span>===============================</span>
-<header>header=header=header=header=header=header=header=header=header=header=header=header=</header>
-<span>===============================</span>
-<br>
+<app-header></app-header>
 <div class="wrapper">
     <app-posts></app-posts>
 </div>
-<br>
-<span>===============================</span>
-<footer>footer=footer=footer=footer=footer=footer=footer=footer=footer=footer=footer=footer=</footer>
-<span>===============================</span>
-</body>
+<app-footer></app-footer>
