--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-header></app-header>
-<div class="wrapper">
-    <app-posts></app-posts>
-</div>
-<app-footer></app-footer>
+<app-home></app-home>
