--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<app-header></app-header>
+<div class="wrapper">
+    <app-posts></app-posts>
+</div>
+<app-footer></app-footer>
