Created a custom button component, not finished.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,15 @@
 <div>
-    <span>===============================</span>
-    <header>HEADER=HEADER=HEADER=HEADER=HEADER=HEADER=HEADER=HEADER=HEADER=HEADER=HEADER=HEADER=header=header=header=header=header=header=header=header=header=header=header=</header>
-    <span>===============================</span>
+
+    <app-header-button label="HOME" [buttonClass]="'custom-class'">
+    </app-header-button>
+
+    <app-header-button label="POSTS" [buttonClass]="'custom-class'">
+    </app-header-button>
+
+    <app-header-button label="ABOUT" [buttonClass]="'custom-class'">
+    </app-header-button>
+
+    <app-header-button label="CONTACT" [buttonClass]="'custom-class'">
+    </app-header-button>
+
 </div>
