Few changes: - added new font (not working) - changed header-component a bit - other.

--- a/src/app/shared/header-button/header-button.component.html
+++ b/src/app/shared/header-button/header-button.component.html
@@ -1,14 +1,10 @@
-<!-- <button 
-    [ngClass]="buttonClass" 
-    (click)="onClick.emit()" 
-    style="margin: 30px;"
-    >
-    {{label}}
-</button> -->
+<div>
 
-<button 
-    [ngClass]="buttonClass" 
-    (click)="onClick.emit()" 
-    >
-    {{label}}
-</button>
+    <span class="label">
+        {{ label }}
+    </span>
+
+    <span class="label">
+        -------
+    </span>
+</div>
