--- a/src/app/shared/header-button/header-button.component.css
+++ b/src/app/shared/header-button/header-button.component.css
@@ -1,3 +1,12 @@
-button {
-    margin: 31px;
+
+div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.label {
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: 'Jersey';
+    margin: 20px 111px 4px 111px;
 }
