--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div>
-    <span>===============================</span>
-    <footer>FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=FOOTER=footer=footer=footer=footer=footer=footer=footer=footer=footer=footer=footer=</footer>
-    <span>===============================</span>
+    <span>twitter link</span>
+    <span>linkedin link</span>
+    <span>github link</span>
 </div>
