--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,3 +1,10 @@
 div {
-    background: #0080FF;
+    background: #fffbf0;
+    margin: 1px 1px 1px 1px;
+    display: flex;
+    justify-content: center;
+}
+
+span {
+    margin: 20px 11px 20px 11px;
 }
