--- a/src/app/shared/header-button/header-button.component.css
+++ b/src/app/shared/header-button/header-button.component.css
@@ -3,10 +3,9 @@ div {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 20px 1px 40px 1px;
 }
 
 .label {
-    /* font-family: Arial, Helvetica, sans-serif; */
-    font-family: 'Jersey';
     margin: 20px 111px 4px 111px;
 }
