--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Font style: normal */
+@font-face {
+    font-family: 'jersey';
+    src: url(/src/assets/fonts/jersey/Jersey10Charted-Regular.ttf) format('truetype');
+  }
+  
+  @font-face {
+    font-family: 'raleway';
+    src: url(/src/assets/fonts/Raleway_Dots/RalewayDots-Regular.ttf) format('truetype');
+  }
