Added border to header buttons.

--- a/src/app/shared/header-button/header-button.component.css
+++ b/src/app/shared/header-button/header-button.component.css
@@ -7,5 +7,8 @@ div {
 }
 
 .label {
-    margin: 20px 111px 4px 111px;
+    border-style: groove;
+    border-radius: 40%;
+    border-width: 2cap;
+    margin: 20px 111px 4px 111px;   
 }
