Added github link.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div>
-    <span>twitter link</span>
-    <span>linkedin link</span>
-    <span>github link</span>
+    <a>twitter link</a>
+    <a>linkedin link</a>
+    <a href="https://github.com/krzysztofplociennik">github link</a>
 </div>
