Added some routing (not really working).

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+
+<button [routerLink]="home"> home </button>
+<button [routerLink]="about"> about </button>
+
 <app-header></app-header>
 <div>
     <app-posts></app-posts>
