Changed footer links.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div>
-    <a>twitter link</a>
-    <a>linkedin link</a>
+    <a href="www.linkedin.com/in/krzysztof-plociennik">linkedin link</a>
     <a href="https://github.com/krzysztofplociennik">github link</a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">twitter link</a>
 </div>
