Few minor changes.

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -7,7 +7,7 @@
 <input type="text" id="contentI">
 <br>
 
-<button (click)="create()">
+<button (click)="createPost()">
     create post
 </button>
 
@@ -22,3 +22,5 @@
     <br>
     {{posts[i].content}}
 </li>
+
+<a>get more</a>
