Added "Articles" section.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,5 @@
 <div>
-    <app-header-button [routerLink]="['/home']" label={{home}}></app-header-button>
+    <app-header-button [routerLink]="['/home']" label={{home}}></app-header-button> 
+    <app-header-button [routerLink]="['/articles']" label={{articles}}></app-header-button>
     <app-header-button [routerLink]="['/about']" label={{about}}></app-header-button>
 </div>
