Added a simple POST for creating a new article.

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <div>
-    <p>articles works!</p>
+    <p>articles works!a</p>
+
+    
 </div>
 <app-footer></app-footer>
