--- a/src/app/search-articles/search-articles.component.html
+++ b/src/app/search-articles/search-articles.component.html
@@ -3,5 +3,9 @@
 <div>
     <label styles="">Search for some articles here -> </label>
     <input type="text" id="titleI" size="60" height="140">
+
+    <button [routerLink]="['/new-article']">
+        create new article
+    </button>
 </div>
 <app-footer></app-footer>
