Added simple text editor.

--- a/src/app/new-article/new-article.component.css
+++ b/src/app/new-article/new-article.component.css
@@ -1,6 +1,6 @@
 div {
     margin: 111px 111px 111px 111px;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     justify-content: center;
 }
