--- a/src/app/new-article/new-article.component.html
+++ b/src/app/new-article/new-article.component.html
@@ -11,11 +11,9 @@
         optionLabel="name"
         placeholder="Select a type" />
 
-    <p-editor [(ngModel)]="content" [style]="{ height: '420px' }" />
+    <p-editor placeholder="Write your content here!" [(ngModel)]="content" [style]="{ height: '420px' }" />
 
-    <button style="width: auto; margin-top: 20px;" (click)="createArticle()">
-        create article
-    </button>
+    <p-button label="Create!" (onClick)="createArticle()" />
 
 </div>
 <app-footer></app-footer>
