--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* // import Quill styles in styles.scss */
 @import "../node_modules/quill/dist/quill.core.css";
 @import "../node_modules/quill/dist/quill.snow.css";
+@import "primeicons/primeicons.css";
 
 @font-face {
   font-family: 'jersey';
