--- a/src/app/search-articles/search-articles.component.css
+++ b/src/app/search-articles/search-articles.component.css
@@ -1,4 +1,24 @@
 
+#bodyDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    min-height: 100vh;
+}
+
+.header {
+    width: 100%;
+}
+
+#contentWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+    flex: 1;
+}
+
 #searchForArticlesDiv {
     margin: 220px 20px 20px 20px;
     display: flex;
@@ -18,4 +38,11 @@
 #searchInputText {
     margin-right: 20px;
     width: 600px;
+}
+
+.footer {
+    position: relative;
+    bottom: 0;  
+    width: 100%;
+    margin-top: 300px;
 }
