--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,5 +1,28 @@
-div {
-    margin: 111px 111px 111px 111px;
+
+#bodyDiv {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    min-height: 100vh;
+}
+
+.header {
+    width: 100%;
+}
+
+#contentWrapper {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    width: 90%;
+    flex: 1;
+}
+
+.footer {
+    position: relative;
+    bottom: 0;  
+    width: 100%;
+    margin-top: 300px;
 }
