--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,10 @@
-<app-header></app-header>
-<div>
-    <p>about works!</p>
+
+<div id="bodyDiv">
+    <app-header class="header"></app-header>
+    <div id="contentWrapper">
+
+        <p>about works!</p>
+
+    </div>
+    <app-footer class="footer" id="footer"></app-footer>
 </div>
-<app-footer></app-footer>
