--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,7 +1,9 @@
-<app-header></app-header>
-<div>
-    <p>List of articles:</p>
+<div id="bodyDiv">
+    <app-header class="header"></app-header>
+    <div id="contentWrapper">
 
-    
+        <span> articles work!</span>
+
+    </div>
+    <app-footer class="footer" id="footer"></app-footer>
 </div>
-<app-footer></app-footer>
