--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,7 @@
 <div>
-    <a href="https://linkedin.com/in/krzysztof-plociennik">linkedin link</a>
-    <a href="https://github.com/krzysztofplociennik">github link</a>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">twitter link</a>
+
+    <a id="linkedIn-button" href="https://linkedin.com/in/krzysztof-plociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-linkedin"></a>
+    <a id="linkedIn-button" href="https://github.com/krzysztofplociennik" target="_blank" rel="noopener noreferrer" class="p-button pi pi-github"></a>
+    <a id="linkedIn-button" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="p-button pi pi-twitter"></a>
+
 </div>
