Changed background colors for footer and header.

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,5 +1,5 @@
 div {
-    background: #fffbf0;
+    background: #324a68;
     margin: 1px 1px 1px 1px;
     display: flex;
     justify-content: center;
