Added simple search functionality for articles.

--- a/src/app/search-articles/search-articles.component.html
+++ b/src/app/search-articles/search-articles.component.html
@@ -7,7 +7,7 @@
                 [(ngModel)]="searchPhrase" />
 
             <p-button id="searchArticlesButton" icon="pi pi-search" [rounded]="true" [severity]="'secondary'"
-                (onClick)="searchForArticles(searchPhrase)" />
+                (onClick)="searchForArticles()" />
         </div>
 
         <div id="createNewArticleDiv">
