--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -1,1 +1,8 @@
-<p>result-item works!</p>
+
+<div id="resultItem">
+    <p-card id="card" [style]="currentStyle" header="{{article?.title}}">
+        <a>{{article?.type}}</a>
+        <a>{{article?.creationDate}}</a>
+    </p-card>
+</div>
+
