Added a working hover functionality to ResultItemComponent.

--- a/src/app/search-articles/search-articles.component.html
+++ b/src/app/search-articles/search-articles.component.html
@@ -20,7 +20,7 @@
         <div id="searchArticlesContent">
             <ul *ngFor="let item of articlesResults">
                 <div (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()">
-                    <app-result-item [routerLink]="['/about']" [article]="item"></app-result-item>
+                    <app-result-item [routerLink]="['/about']" [article]="item" [isHovered]="isHovered"></app-result-item>
                 </div>
             </ul>
         </div>
