--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -1,6 +1,6 @@
 
-<div id="resultItem">
-    <p-card id="card" [style]="currentStyle" header="{{article?.title}}">
+<div id="resultItem" [class.hovered]="isHovered">
+    <p-card id="card" [style]="getCurrentStyle()" header="{{article?.title}}">
         <a>{{article?.type}}</a>
         <a>{{article?.creationDate}}</a>
     </p-card>
