--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -1,8 +1,10 @@
 
 <div id="resultItem" [class.hovered]="isHovered">
     <p-card id="card" [style]="getCurrentStyle()" header="{{article?.title}}">
-        <a>{{article?.type}}</a>
-        <a>{{article?.creationDate}}</a>
+        <div id="innerCard">
+            <a>genre: {{article?.type}}</a>
+            <a>created: {{article?.creationDate}}</a>
+        </div>
     </p-card>
 </div>
 
