Created ArticleDetailsComponent and added routing to it.

--- a/src/app/search-articles/search-articles.component.html
+++ b/src/app/search-articles/search-articles.component.html
@@ -20,7 +20,7 @@
         <div id="searchArticlesContent">
             <ul *ngFor="let item of articlesResults; let i = index">
                 <div (mouseenter)="mouseEnter(i)" (mouseleave)="mouseLeave(i)">
-                    <app-result-item [routerLink]="['/about']" [article]="item" [isHovered]="hoveredIndex === i"></app-result-item>
+                    <app-result-item [routerLink]="['/article-details', item.id]" [article]="item" [isHovered]="hoveredIndex === i"></app-result-item>
                 </div>
             </ul>
         </div>
