Added fetching article details functionality.

--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -1,10 +1,9 @@
 <div id="bodyDiv">
     <app-header class="header"></app-header>
     <div id="contentWrapper">
-
-        <span> details work</span>
-
         
+        <span>{{article?.title}}</span>
+        <span>{{article?.content}}</span>
 
     </div>
     <app-footer class="footer" id="footer"></app-footer>
