--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import "../node_modules/quill/dist/quill.core.css";
 @import "../node_modules/quill/dist/quill.snow.css";
 @import "primeicons/primeicons.css";
+@import url('https://fonts.googleapis.com/css2?Raleway&display=swap');
 
 @font-face {
   font-family: 'jersey';
