--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -2,4 +2,40 @@ div {
     background: #324a68;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
+                        
+.btn {
+    cursor: pointer; 
+    border: 1px solid rgb(167, 224, 255); 
+    font-family: "Bebas Neue";
+    font-size: 34px; 
+    color: rgb(255, 255, 255); 
+    padding: 10px 30px; 
+    margin: 10px 10px 10px 10px;
+    transition: 2487ms;
+    width: 266px;
+    height: 60px; 
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset; 
+    border-radius: 23px; 
+    background: linear-gradient(90deg, rgb(0, 102, 204) 18%, rgb(23, 37, 60) 100%); 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: row-reverse; 
+    --hover-borderSize: 4px; 
+    --hover-width: 337px; 
+    font-weight: 400; 
+    --hover-borderc: #7bb6f0; 
+    --hover-color: #7bb6f0;
+}
+
+
+.btn:hover{
+    color: rgb(123, 182, 240);
+    background: rgb(0, 102, 204) none repeat scroll 0% 0% / auto padding-box border-box;
+    border-color: rgb(123, 182, 240);
+    border-width: 3px;
+    border-style: solid;
+}
+
