--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
 
-    <button [routerLink]="['/search-articles']" class="btn" style="" id="customBtn">Search</button>
-    <button [routerLink]="['/articles']" class="btn" style="" id="customBtn">Articles</button>
-    <button [routerLink]="['/about']" class="btn" style="" id="customBtn">About</button>
+    <button [routerLink]="['/search-articles']" class="btn" id="customBtn">Search</button>
+    <button [routerLink]="['/articles']" class="btn" id="customBtn">Articles</button>
+    <button [routerLink]="['/about']" class="btn" id="customBtn">About</button>
 
 </div>
