Added header and footer to the 404 view.

--- a/src/app/shared/page-not-found/page-not-found.component.html
+++ b/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,3 +1,9 @@
-<p>page-not-found works!</p>
+<div id="bodyDiv">
+    <app-header class="header"></app-header>
+    <div id="contentWrapper">
 
-<button routerLink="/home"> go back to home </button>
+        <p>page not found works!</p>
+
+    </div>
+    <app-footer class="footer" id="footer"></app-footer>
+</div>
