--- a/src/styles.css
+++ b/src/styles.css
@@ -2,16 +2,21 @@
 @import "../node_modules/quill/dist/quill.core.css";
 @import "../node_modules/quill/dist/quill.snow.css";
 @import "primeicons/primeicons.css";
-@import url('https://fonts.googleapis.com/css2?Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 @font-face {
   font-family: 'jersey';
   src: url(/src/assets/fonts/jersey/Jersey10Charted-Regular.ttf) format('truetype');
 }
 
+/* latin */
 @font-face {
-  font-family: 'raleway';
-  src: url(/src/assets/fonts/Raleway_Dots/RalewayDots-Regular.ttf) format('truetype');
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/raleway/v34/1Ptug8zYS_SKggPNyC0ITw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 html,
@@ -21,5 +26,5 @@ body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Inter var", sans-serif;
 }
