--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -1,10 +1,11 @@
 <div id="bodyDiv">
     <app-header class="header"></app-header>
     <div id="contentWrapper">
-        
-        <span>{{article?.title}}</span>
-        <span>{{article?.content}}</span>
 
+        <div id="titleDiv">{{article?.title}}</div>
+
+        <div id="contentDiv">{{article?.content}}</div>
+        
     </div>
     <app-footer class="footer" id="footer"></app-footer>
 </div>
