Added handy comments to the about .css file.

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,4 +1,4 @@
-
+/* header/footer wapper */
 #bodyDiv {
     display: flex;
     flex-direction: column;
@@ -26,3 +26,4 @@
     width: 100%;
     margin-top: 300px;
 }
+/* header/footer wapper */
