--- a/src/app/new-article/new-article.component.html
+++ b/src/app/new-article/new-article.component.html
@@ -1,21 +1,22 @@
+<div id="bodyDiv">
+    <app-header class="header"></app-header>
+    <div id="contentWrapper">
 
-<app-header></app-header>
-<div>
+        <input id="articleTitle" style="margin-bottom: 20px; margin-right: 20px;" type="text" placeholder="Write your title here!" pInputText [(ngModel)]="articleTitle" />
 
-    <input id="articleTitle" style="margin-bottom: 20px; margin-right: 20px;" type="text" placeholder="Write your title here!" pInputText [(ngModel)]="articleTitle" />
+        <p-dropdown 
+            styles="margin-left: 20px;"
+            [options]="articleTypes" 
+            [(ngModel)]="selectedType" 
+            optionLabel="name"
+            placeholder="Select a type" />
+    
+        <p-chips id="tagsInput" placeholder="Add your tags!" [(ngModel)]="tags" />
+    
+        <p-editor placeholder="Write your content here!" [(ngModel)]="content" [style]="{ height: '420px' }" />
+    
+        <p-button id="createArticleButton" label="Create!" (onClick)="createArticle()" />
 
-    <p-dropdown 
-        styles="margin-left: 20px;"
-        [options]="articleTypes" 
-        [(ngModel)]="selectedType" 
-        optionLabel="name"
-        placeholder="Select a type" />
-
-    <p-chips id="tagsInput" placeholder="Add your tags!" [(ngModel)]="tags" />
-
-    <p-editor placeholder="Write your content here!" [(ngModel)]="content" [style]="{ height: '420px' }" />
-
-    <p-button id="createArticleButton" label="Create!" (onClick)="createArticle()" />
-
+    </div>
+    <app-footer class="footer" id="footer"></app-footer>
 </div>
-<app-footer></app-footer>
