--- a/src/app/articles/article-details/article-details.component.css
+++ b/src/app/articles/article-details/article-details.component.css
@@ -1,4 +1,4 @@
-
+/* header/footer wapper */
 #bodyDiv {
     display: flex;
     flex-direction: column;
@@ -12,10 +12,12 @@
 }
 
 #contentWrapper {
+    border-style: dashed;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 90%;
     flex: 1;
 }
 
@@ -23,19 +25,18 @@
     position: relative;
     bottom: 0;  
     width: 100%;
-    margin-top: 300px;
+    margin-top: 30px;
 }
+/* header/footer wapper */
 
 #titleDiv {
-    width: 90%;
-    align-items: left;
-    justify-content: left;
     font-size:300%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
 #contentDiv {
-    width: 100%;
+    border-style: dashed;
+    width: 60%;
     word-break: break-all;
 }
