--- a/src/app/articles/articles.component.css
+++ b/src/app/articles/articles.component.css
@@ -1,4 +1,4 @@
-
+/* header/footer wapper */
 #bodyDiv {
     display: flex;
     flex-direction: column;
@@ -25,4 +25,11 @@
     bottom: 0;  
     width: 100%;
     margin-top: 300px;
+}
+/* header/footer wapper */
+
+#allArticlesDiv {
+    width: 100%;
+    margin: 20px 20px 20px 20px;
+    justify-content: center;
 }
