--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -2,7 +2,13 @@
     <app-header class="header"></app-header>
     <div id="contentWrapper">
 
-        <span> articles work!</span>
+        <div id="allArticlesDiv">
+            <ul *ngFor="let item of articlesResults; let i = index">
+                <div (mouseenter)="mouseEnter(i)" (mouseleave)="mouseLeave(i)">
+                    <app-all-articles-item [routerLink]="['/article-details', item.id]" [article]="item" [isHovered]="hoveredIndex === i"></app-all-articles-item>
+                </div>
+            </ul>
+        </div>
 
     </div>
     <app-footer class="footer" id="footer"></app-footer>
