--- a/src/styles.css
+++ b/src/styles.css
@@ -21,10 +21,11 @@
 
 html,
 body {
-  height: 100%;
+  height: 100%; 
 }
 
 body {
+  background-color: rgb(235, 232, 230);
   margin: 0;
   font-family: "Inter var", sans-serif;
 }
