--- a/src/app/articles/article-details/article-details.component.css
+++ b/src/app/articles/article-details/article-details.component.css
@@ -2,7 +2,6 @@
 #bodyDiv {
     display: flex;
     flex-direction: column;
-    align-items: center;
     height: 100%;
     min-height: 100vh;
 }
@@ -14,9 +13,9 @@
 #contentWrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    width: 90%;
+    width: 100%;
     flex: 1;
 }
 
@@ -30,11 +29,10 @@
 
 #titleDiv {
     font-size:300%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 40px 40px 40px 40px;
 }
 
 #contentDiv {
-    width: 60%;
+    width: 50%;
     word-break: break-all;
 }
