--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -2,6 +2,10 @@
     <app-header class="header"></app-header>
     <div id="contentWrapper">
 
+        <div id="deleteButtonDiv">
+            <p-button id="deleteArticleButton" label="delete article" severity="danger" size="small" (onClick)="deleteArticle()" />
+        </div>
+
         <div id="titleDiv">{{article?.title}}</div>
 
         <div id="contentDiv" [innerHTML]="article?.content"></div>
