--- a/src/app/articles/article-details/article-details.component.html
+++ b/src/app/articles/article-details/article-details.component.html
@@ -3,6 +3,8 @@
     <div id="contentWrapper">
 
         <div id="deleteButtonDiv">
+            <p-toast />
+            <p-confirmDialog />
             <p-button id="deleteArticleButton" label="delete article" severity="danger" size="small" (onClick)="deleteArticle()" />
         </div>
 
