--- a/src/app/articles/all-articles-item/all-articles-item.component.html
+++ b/src/app/articles/all-articles-item/all-articles-item.component.html
@@ -1,8 +1,8 @@
 <div id="resultItem" [class.hovered]="isHovered">
     <p-card id="card" [style]="getCurrentStyle()" header="{{article?.title}}">
         <div id="innerCard">
-            <a>genre: {{article?.type}}</a>
-            <a>created: {{article?.creationDate}}</a>
+            <a>Type: {{ getFormattedType() }}</a>
+            <a>Created: {{ getFormattedDate() }}</a>
         </div>
     </p-card>
 </div>
