--- a/src/app/articles/all-articles-item/all-articles-item.component.css
+++ b/src/app/articles/all-articles-item/all-articles-item.component.css
@@ -2,3 +2,23 @@
     display: flex;
     flex-direction: column;
 }
+
+#type {
+    margin-bottom: 10px;    
+}
+
+#created {
+    margin-top: 10px;
+}
+
+#tags {
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+p-chip {
+    margin-left: 2px;
+    margin-right: 2px;
+}
