--- a/src/app/search-articles/search-result-item/search-result-item.component.html
+++ b/src/app/search-articles/search-result-item/search-result-item.component.html
@@ -2,8 +2,16 @@
 <div id="resultItem" [class.hovered]="isHovered">
     <p-card id="card" [style]="getCurrentStyle()" header="{{article?.title}}">
         <div id="innerCard">
-            <a>genre: {{article?.type}}</a>
-            <a>created: {{article?.creationDate}}</a>
+            <a>Type: {{article?.type}}</a>
+
+            <div id="tags">
+                Tags: 
+                <div *ngFor="let tag of article?.tags" style="display: inline-block; margin-left: 5px;">
+                    <p-chip [style]="{'height': '30px','width': 'auto'}">{{ tag }}</p-chip>
+                </div>
+            </div>
+
+            <a>Created: {{article?.creationDate}}</a>
         </div>
     </p-card>
 </div>
